--- a/index.html
+++ b/index.html
@@ -23,57 +23,54 @@
 </head>
 
 <body>
-    <div class="navbar navbar-fixed-top" data-activeslide="1">
-        <div class="container">
-            <!-- .navbar-toggle is used as the toggle for collapsed navbar content -->
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            
-            <div class="nav-collapse collapse navbar-responsive-collapse">
-                <ul class="nav row">
-                    <li data-slide="2" class="col-12 col-sm-2 active"><a id="menu-link-2" href="#slide-2" title="ABOUT">
-                      <span class="icon icon-user"></span> <span class="text">ABOUT</span></a>
-                    </li>
-                    <li data-slide="20" class="col-12 col-sm-2"><a id="menu-link-3" href="#slide-20" title="THEME">
-                      <span class="icon icon-gears"></span> <span class="text">THEME</span></a>
-                    </li>
-                    <li data-slide="40" class="col-12 col-sm-2"><a id="menu-link-3" href="#slide-40" title="SCHEDULE">
-                      <span class="icon icon-calendar"></span> <span class="text">SCHEDULE</span></a>
-                    </li>
-                    <li data-slide="4" class="col-12 col-sm-2"><a id="menu-link-4" href="#slide-4" title="FAQ">
-                      <span class="icon icon-question"></span> <span class="text">FAQ</span></a>
-                    </li>
-                    <li data-slide="5" class="col-12 col-sm-2"><a id="menu-link-5" href="#slide-5" title="PRIZES">
-                      <span class="icon icon-trophy"></span> <span class="text">PRIZES</span></a>
-                    </li>
-                    <li data-slide="6" class="col-12 col-sm-2"><a id="menu-link-6" href="#slide-6" title="CONTACT">
-                      <span class="icon icon-envelope"></span> <span class="text">CONTACT</span></a>
-                    </li>
-                </ul>
-                <div class="row">
-                    <div class="col-sm-2 active-menu" style="left: 46.8438px; width: 57px;"></div>
-                </div>
-            </div>
-        </div>
+  <div class="navbar navbar-fixed-top" data-activeslide="1">
+    <div class="container">
+      <!-- START NAVBAR  
+          .navbar-toggle is used as the toggle for collapsed navbar content -->
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      
+      <div class="nav-collapse collapse navbar-responsive-collapse">
+        <ul class="nav row">
+          <li data-slide="2" class="col-12 col-sm-2 active"><a id="menu-link-2" href="#slide-2" title="ABOUT">
+            <span class="icon icon-user"></span> <span class="text">ABOUT</span></a>
+          </li>
+          <li data-slide="20" class="col-12 col-sm-2"><a id="menu-link-3" href="#slide-20" title="THEME">
+            <span class="icon icon-gears"></span> <span class="text">THEME</span></a>
+          </li>
+          <li data-slide="40" class="col-12 col-sm-2"><a id="menu-link-3" href="#slide-40" title="SCHEDULE">
+            <span class="icon icon-calendar"></span> <span class="text">SCHEDULE</span></a>
+          </li>
+          <li data-slide="4" class="col-12 col-sm-2"><a id="menu-link-4" href="#slide-4" title="FAQ">
+            <span class="icon icon-question"></span> <span class="text">FAQ</span></a>
+          </li>
+          <li data-slide="5" class="col-12 col-sm-2"><a id="menu-link-5" href="#slide-5" title="PRIZES">
+            <span class="icon icon-trophy"></span> <span class="text">PRIZES</span></a>
+          </li>
+          <li data-slide="6" class="col-12 col-sm-2"><a id="menu-link-6" href="#slide-6" title="CONTACT">
+            <span class="icon icon-envelope"></span> <span class="text">CONTACT</span></a>
+          </li>
+        </ul>
+      </div>
     </div>
-    <!-- END NAVBAR -->
+  </div>
+  <!-- END NAVBAR -->
 
-    <!-- === MAIN Background === -->
-    <div class="slide story" id="slide-1" data-slide="1">
-        <div class="container">
-            <div id="home-row-1" class="row clearfix">
-                 <div class="col-12">
-                    <h1 class="font-semibold">Rowdy<span class="font-thin" id="yellowtail">Hacks</span></h1>
-                    <h4 class="font-thin">UTSA's first inagural <span class="font-semibold">Hackathon</span> hosted by ACM UTSA.</h4>
-                    <br>
-                    <br>
-                </div><!-- /col-12 -->
-            </div><!-- /row -->
-        </div><!-- /container -->
-    </div><!-- /slide1 -->
+  <!-- === MAIN Background === -->
+  <div class="slide story" id="slide-1" data-slide="1">
+    <div class="container">
+      <div id="home-row-1" class="row clearfix">
+         <div class="col-12">
+          <h1 class="font-semibold">Rowdy<span class="font-thin" id="yellowtail">Hacks</span></h1>
+          <h4 class="font-thin">UTSA's first inagural <span class="font-semibold">Hackathon</span> hosted by ACM UTSA.</h4>
+          <br><br>
+        </div><!-- /col-12 -->
+      </div><!-- /row -->
+    </div><!-- /container -->
+  </div><!-- /slide1 -->
 
     <!-- === Slide 2 === -->
     <div class="slide story" id="slide-2" data-slide="2">
@@ -86,13 +83,11 @@
             </div><!-- /row -->
             <div class="row subtitle-row">
                 <div class="col-12 font-thin">
-
                     <p>It’s official! Come join us at RowdyHacks as we build apps, games, and any other neat projects in 24 hours.
                        Whether you’re a seasoned hacker or new to the hackathon community, we’ve got your back through the whole hacking experience.</p>
                     <br>
                     <p>If you aren’t familiar, a hackathon is where you turn your crazy ideas into real projects. Plenty of your fellow peers gather 
-                       to build something they’re passionate about so get involved in making incredible things. The only catch is that you help take 
-                       care of the building. Other than that, everything else is FREE.</p>
+                       to build something they’re passionate about so get involved in making incredible things.</p>
                     <br>
                     <p>Apply Now<br></p>
                <div class="col-12 col-sm-12" id="volunteer">
@@ -210,29 +205,27 @@
     <div class="slide story" id="slide-4" data-slide="4">
         <div class="container">
             <div class="row title-row">
-                <div class="col-12 font-thin">RowdyHacks <span class="font-semibold">FAQs</span></div>
+                <div class="col-12 font-thin">Frequently asked <span class="font-semibold">questions</span></div>
             </div><!-- /row -->
             <div class="row line-row">
                 <div class="hr">&nbsp;</div>
-            </div><!-- /row -->
+            </div>
+
+            <!-- Start of first row of questions -->
             <div class="row subtitle-row">
-                <div class="col-sm-1 hidden-sm">&nbsp;</div>
-                <div class="col-12 col-sm-10 font-bold">Question1</div>
-                <div class="row subtitle-row"><span class="font-thin">Answer goes here</span></div>
-                <div class="col-sm-1 hidden-sm">&nbsp;</div>
-                <div class="col-12 col-sm-10 font-bold">Question2</div>
-                <div class="row subtitle-row"><span class="font-thin">Answer goes here</span></div>
-                <div class="col-sm-1 hidden-sm">&nbsp;</div>
-                <div class="col-12 col-sm-10 font-bold">Question3</div>
-                <div class="row subtitle-row"><span class="font-thin">Answer goes here</span></div>
-                <div class="col-sm-1 hidden-sm">&nbsp;</div>
-                <div class="col-12 col-sm-10 font-bold">Question4</div>
-                <div class="row subtitle-row"><span class="font-thin">Answer goes here</span></div>
-                <div class="col-sm-1 hidden-sm">&nbsp;</div>
-                <div class="col-12 col-sm-10 font-bold">Question5</div>
-                <div class="row subtitle-row"><span class="font-thin">Answer goes here</span></div>
-                <div class="col-sm-1 hidden-sm">&nbsp;</div>
-            </div><!-- /row -->
+              <div class="col-lg-6">
+                <h3 class="font-semibold"> Questions 1 </h5>
+                <p class="font-thin"> Answer goes here </p>
+              </div>
+
+              <div class="col-lg-6">
+                <h3 class="font-semibold"> Questions 1 </h5>
+                <p class="font-thin"> Answer goes here </p>
+              </div>
+            </div>
+            <!-- End of first row of questions -->
+
+
         </div><!-- /container -->
     </div><!-- /slide4 -->
 
@@ -285,9 +278,8 @@
                 <div class="col-sm-1 hidden-sm">&nbsp;</div>
             </div><!-- /row -->
         </div><!-- /container -->
-    </div><!-- /Slide 6 -->
-
-
+    </div>
+    <!-- Slide 6 -->
 
 <!-- SCRIPTS -->
 <script src="js/rowdyhacks.js"></script>
@@ -312,7 +304,6 @@ $(document).ready(function(e) {
                     }
             }
     });
-
 });
 </script>
 </body></html>
