Added questions to FAQ

--- a/index.html
+++ b/index.html
@@ -214,17 +214,79 @@
             <!-- Start of first row of questions -->
             <div class="row subtitle-row">
               <div class="col-lg-6">
-                <h3 class="font-semibold"> Questions 1 </h5>
-                <p class="font-thin"> Answer goes here </p>
+                <h3 class="font-semibold">What is a hackathon?</h3>
+                <p class="font-thin">Hackathons are events where individuals form teams to create, design, and develop projects.
+                </p>
               </div>
 
               <div class="col-lg-6">
-                <h3 class="font-semibold"> Questions 1 </h5>
-                <p class="font-thin"> Answer goes here </p>
+                <h3 class="font-semibold">Why should I come?</h3>
+                <p class="font-thin">You'll be able to meet new people, discuss ideas, and collaborate on interesting projects.</p>
               </div>
             </div>
             <!-- End of first row of questions -->
 
+            <!-- Start of second row of questions -->
+            <div class="row subtitle-row">
+              <div class="col-lg-6">
+                <h3 class="font-semibold">How many people will be participating?</h3>
+                <p class="font-thin">There will be a limited number of participants. The earlier you sign up, the better the chance you have at being accepted.
+                </p>
+              </div>
+
+              <div class="col-lg-6">
+                <h3 class="font-semibold">Where will RowdyHacks be located?</h3>
+                <p class="font-thin">RowdyHacks will take place on the first floor of the North Paseo Building at UTSA's main campus.</p>
+              </div>
+            </div>
+            <!-- End of second row of questions -->
+
+            <!-- Start of third row of questions -->
+            <div class="row subtitle-row">
+              <div class="col-lg-6">
+                <h3 class="font-semibold">Who can attend?</h3>
+                <p class="font-thin">Any undergraduate or graduate student currently enrolled at UTSA. 
+                </p>
+              </div>
+
+              <div class="col-lg-6">
+                <h3 class="font-semibold">What can I build?</h3>
+                <p class="font-thin">Be creative! Anything you want web/mobile applications, a personal idea
+                </p>
+              </div>
+            </div>
+            <!-- End of third row of questions -->
+
+            <!-- Start of fourth row of questions -->
+            <div class="row subtitle-row">
+              <div class="col-lg-6">
+                <h3 class="font-semibold">How much will it cost?</h3>
+                <p class="font-thin">We will provide food, snacks, beverages. You just have to show up. 
+                </p>
+              </div>
+
+              <div class="col-lg-6">
+                <h3 class="font-semibold">What do I need to bring?</h3>
+                <p class="font-thin">Here are some items we recommend you bring:<br>Laptops, charger, a change of clothes, and toiletries
+                </p>
+              </div>
+            </div>
+            <!-- End of fourth row of questions -->
+
+            <!-- Start of fourth row of questions -->
+            <div class="row subtitle-row">
+              <div class="col-lg-6">
+                <h3 class="font-semibold">How big can a team be?</h3>
+                <p class="font-thin">We recommend teams of up to four members
+                </p>
+              </div>
+
+              <div class="col-lg-6">
+                <h3 class="font-semibold">What if I don't have a team or idea?</h3>
+                <p class="font-thin">We will give you the opportunity to form teams during the opening ceremonies.</p>
+              </div>
+            </div>
+            <!-- End of fourth row of questions -->
 
         </div><!-- /container -->
     </div><!-- /slide4 -->
