--- a/index.html
+++ b/index.html
@@ -3,23 +3,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
   <title>RowdyHacks</title> 
-  <meta name="description" content="BlackTie.co - Free Handsome Bootstrap Themes">            
-  <meta name="keywords" content="themes, bootstrap, free, templates, bootstrap 3, freebie,">
+  <meta name="description" content="ACM UTSA RowdyHacks">            
+  <meta name="keywords" content="acm, utsa, the association for computing machinery, hackathon, rowdyhacks,">
   <meta property="og:title" content="">
 
   <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="fancybox/jquery.fancybox-v=2.1.5.css" type="text/css" media="screen">
   <link rel="stylesheet" href="css/font-awesome.min.css">
-
   <link rel="stylesheet" type="text/css" href="css/style.css">    
 
   <link href="http://fonts.googleapis.com/css?family=Titillium+Web:400,600,300,200&amp;subset=latin,latin-ext" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Yellowtail" rel="stylesheet" type="text/css">
-
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">      
-  <link rel="prefetch" href="images/zoom.png">
-                  
-  <style type="text/css">.fancybox-margin{margin-right:0px;}</style>
 </head>
 
 <body>
@@ -65,7 +61,7 @@
       <div id="home-row-1" class="row clearfix">
          <div class="col-12">
           <h1 class="font-semibold">Rowdy<span class="font-thin" id="yellowtail">Hacks</span></h1>
-          <h4 class="font-thin">UTSA's first inagural <span class="font-semibold">Hackathon</span> hosted by ACM UTSA.</h4>
+          <h4 class="font-thin font-main">Hosted by <span class="font-semibold">ACM</span> UTSA</h4>
           <br><br>
         </div><!-- /col-12 -->
       </div><!-- /row -->
@@ -82,7 +78,7 @@
                 <div class="hr">&nbsp;</div>
             </div><!-- /row -->
             <div class="row subtitle-row">
-                <div class="col-12 font-thin">
+                <div class="col-12 font-about">
                     <p>It’s official! Come join us at RowdyHacks as we build apps, games, and any other neat projects in 24 hours.
                        Whether you’re a seasoned hacker or new to the hackathon community, we’ve got your back through the whole hacking experience.</p>
                     <br>
@@ -107,25 +103,22 @@
                 <div class="row line-row">
                     <div class="hr">&nbsp;</div>
                 </div><!-- /row -->
-                <div class="row subtitle-row">
-                    <div class="col-12 font-thin">Theme coming soon!</div>
-                </div><!-- /row -->
         
             <div class="row content-row">
                 <div class="col-12 col-lg-4 col-sm-6">
                     <p><i class="icon icon-laptop"></i></p>
                     <h2><span class="font-semibold">Design</span></h2>
-                    <h4 class="font-thin">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h4>
+                    <h4 class="font-thin">Text text text</h4>
                 </div><!-- /col12 -->
                 <div class="col-12 col-lg-4 col-sm-6">
                         <p><i class="icon icon-pencil"></i></p>
-                        <h2><span class="font-semibold">Develope</span></h2>
-                        <h4 class="font-thin">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h4>
+                        <h2><span class="font-semibold">Develop</span></h2>
+                        <h4 class="font-thin">Text text text</h4>
                 </div><!-- /col12 -->
                 <div class="col-12 col-lg-4 col-sm-6">
                         <p><i class="icon icon-tablet"></i></p>
                         <h2 class="font-semibold">Create</h2>
-                        <h4 class="font-thin">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h4>
+                        <h4 class="font-thin">Text text text</h4>
                 </div><!-- /col12 -->
             </div><!-- /row -->
 
@@ -202,7 +195,7 @@
     <!-- /slide4 -->
 
     <!-- === Slide 4 === -->
-    <div class="slide story" id="slide-4" data-slide="4">
+    <div class="slide story faq" id="slide-4" data-slide="4">
         <div class="container">
             <div class="row title-row">
                 <div class="col-12 font-thin">Frequently asked <span class="font-semibold">questions</span></div>
@@ -214,7 +207,7 @@
             <!-- Start of first row of questions -->
             <div class="row subtitle-row">
               <div class="col-lg-6">
-                <h3 class="font-semibold">What is a hackathon?</h3>
+                <h3 class="font-faq">What is a hackathon?</h3>
                 <p class="font-thin">Hackathons are events where individuals form teams to create, design, and develop projects.
                 </p>
               </div>
