Updated button on index

--- a/index.html
+++ b/index.html
@@ -87,7 +87,9 @@
                     <br>
                     <p>Apply Now<br></p>
                <div class="col-12 col-sm-12" id="volunteer">
-               <button type="submit" class="btn btn-default"><a href="rowdyhacks.html"><i class="fa fa-chevron-right"> Register</i></a></button>
+                <a href="rowdyhacks.html" target="_blank"><button type="button" class="btn btn-default" onclick="window.location.assign('rowdyhacks.html')">
+                  <i class="fa fa-chevron-right"> Register</i></button>
+                </a>
                 </div>
                 </div>
             </div><!-- /row -->
