wrapped contact text in slide 6- questinos

--- a/index.html
+++ b/index.html
@@ -315,22 +315,34 @@
             </div><!-- /row -->
             <div class="row subtitle-row">
                 <div class="col-sm-1 hidden-sm">&nbsp;</div>
-                <div class="col-12 col-sm-10 font-light">Got Questions?<br>Feel free to e-mail us or send us a message via social media.</div>
+                <div class="col-12 col-sm-10 font-light">Have Questions?<br>Feel free to e-mail us or send us a message via social media.</div>
                 <div class="col-sm-1 hidden-sm">&nbsp;</div>
             </div><!-- /row -->
             <div id="contact-row-4" class="row">
                 <div class="col-sm-3 hidden-sm">&nbsp;</div>
                 <div class="col-12 col-sm-2 with-hover-text">
                     <p><a href="mailto:acm.utsa@gmail.com"><i class="icon icon-envelope"></i></a></p>
-                    <span class="hover-text font-light ">acm.utsa@gmail.com</span>
+                     <span class="hover-text font-light ">
+                        <div class="contact-text">
+                           acm.utsa @gmail.com
+                        </div>
+                     </span>
                 </div><!-- /col12 -->
                 <div class="col-12 col-sm-2 with-hover-text">
                     <p><a target="_blank" href="https://www.facebook.com/acmutsa"><i class="icon icon-facebook"></i></a></p>
-                    <span class="hover-text font-light ">facebook.com/acmutsa</span>
+                    <span class="hover-text font-light ">
+                        <div class="contact-text"> 
+                        facebook.com/acmutsa
+                        </div>
+                     </span>
                 </div><!-- /col12 -->
                 <div class="col-12 col-sm-2 with-hover-text">
                     <p><a target="_blank" href="https://www.twitter.com/acm_utsa"><i class="icon icon-twitter"></i></a></p>
-                    <span class="hover-text font-light ">@acm_utsa</span>
+                     <span class="hover-text font-light">
+                        <div class="contact-text"> 
+                           @acm_utsa
+                        </div>
+                     </span>
                 </div><!-- /col12 -->
                 <div class="col-sm-1 hidden-sm">&nbsp;</div>
             </div><!-- /row -->
