Updated schedule section

--- a/index.html
+++ b/index.html
@@ -85,10 +85,9 @@
                     <p>If you aren’t familiar, a hackathon is where you turn your crazy ideas into real projects. Plenty of your fellow peers gather 
                        to build something they’re passionate about so get involved in making incredible things.</p>
                     <br>
-                    <p>Apply Now<br></p>
                <div class="col-12 col-sm-12" id="volunteer">
-                <a href="rowdyhacks.html" target="_blank"><button type="button" class="btn btn-default" onclick="window.location.assign('rowdyhacks.html')">
-                  <i class="fa fa-chevron-right"> Register</i></button>
+                <a href="rowdyhacks.html" target="_blank"><button type="button" class="btn-xl btn-default" onclick="window.location.assign('rowdyhacks.html')">
+                  <i class="fa fa-chevron-right"></i>Register</button>
                 </a>
                 </div>
                 </div>
@@ -131,65 +130,65 @@
     <div class="slide story" id="slide-40" data-slide="40">
         <div class="container">
             <div class="row title-row">
-                <div class="col-12 font-thin">RowdyHacks <span class="font-semibold">Schedule</span></div>
+                <div class="col-12 font-thin">Event<span class="font-semibold"> Schedule</span></div>
             </div><!-- /row -->
             <div class="row line-row">
                 <div class="hr">&nbsp;</div>
             </div><!-- /row -->
             <div class="row subtitle-row">
                 <div class="col-sm-1 hidden-sm">&nbsp;</div>
-                <div class="col-12 col-sm-10 font-bold">Friday</div>
+                <div class="col-12 col-sm-10 font-bold"><h3>Friday</h3></div>
                 <div class="row subtitle-row">
                     <div class="col-lg-6 col-sm-6 font-bold">
-                        <span class="font-thin">5:00pm - 6:00pm</span>
+                      <p>5:00pm - 6:00pm</p>
                     </div>
-                    <div class="col-lg-6 col-sm-6 font-bold">
-                        <span class="font-thin">Check In/Registration</span>
+                    <div class="col-lg-6 col-sm-6">
+                      <p>Check In/Registration</p>
                     </div>
-                    <div class="col-lg-6 col-sm-6 font-bold">
-                        <span class="font-thin">6:00pm - 7:00pm</span>
+                    <div class="col-lg-6 col-sm-6">
+                      <p>6:00pm - 7:00pm</p>
                     </div>
-                    <div class="col-lg-6 col-sm-6 font-bold">
-                        <span class="font-thin">Opening Ceremonies/Dinner</span>
+                    <div class="col-lg-6 col-sm-6">
+                      <p>Opening Ceremonies/Dinner</p>
                     </div>
-                    <div class="col-lg-6 col-sm-6 font-bold">
-                        <span class="font-thin">12:00am</span>
+                    <div class="col-lg-6 col-sm-6">
+                      <p>12:00am</p>
                     </div>
-                    <div class="col-lg-6 col-sm-6 font-bold">
-                        <span class="font-thin">Midnight Snack</span>
+                    <div class="col-lg-6 col-sm-6">
+                      <p>Midnight Snack</p>
                     </div>
                 </div>
                 <div class="col-sm-1 hidden-sm">&nbsp;</div>
-                <div class="col-12 col-sm-10 font-bold">Saturday</div>
-                    <div class="col-lg-6 col-sm-6 font-bold">
-                        <span class="font-thin">7:00am</span>
+                <div class="col-12 col-sm-10 font-bold"><h3>Saturday</h3></div>
+                    <div class="col-lg-6 col-sm-6">
+                      <p>7:00am</p>
                     </div>
-                    <div class="col-lg-6 col-sm-6 font-bold">
-                        <span class="font-thin">Breakfast</span>
+                    <div class="col-lg-6 col-sm-6">
+                      <p>Breakfast</p>
                     </div>
-                    <div class="col-lg-6 col-sm-6 font-bold">
-                        <span class="font-thin">12:00pm</span>
+                    <div class="col-lg-6 col-sm-6">
+                      <p>12:00pm</p>
                     </div>
-                    <div class="col-lg-6 col-sm-6 font-bold">
-                        <span class="font-thin">Project Submissions/Lunch</span>
+                    <div class="col-lg-6 col-sm-6">
+                      <p>Project Submissions/Lunch</p>
                     </div>
-                    <div class="col-lg-6 col-sm-6 font-bold">
-                        <span class="font-thin">12:00pm - 3:00pm</span>
+                    <div class="col-lg-6 col-sm-6">
+                      <p>12:00pm - 3:00pm</p>
                     </div>
-                    <div class="col-lg-6 col-sm-6 font-bold">
-                        <span class="font-thin">Judging</span>
+                    <div class="col-lg-6 col-sm-6">
+                      <p>Judging</p>
                     </div>
-                    <div class="col-lg-6 col-sm-6 font-bold">
-                        <span class="font-thin">3:00pm - 5:00pm</span>
+                    <div class="col-lg-6 col-sm-6">
+                      <p>3:00pm - 5:00pm</p>
                     </div>
-                    <div class="col-lg-6 col-sm-6 font-bold">
-                        <span class="font-thin">Presentations/Prizes</span>
+                    <div class="col-lg-6 col-sm-6">
+                      <p>Presentations/Prizes</p>
                     </div>
-                    <div class="col-lg-6 col-sm-6 font-bold">
-                        <span class="font-thin">5:00pm - 6:00pm</span>
+                    <div class="col-lg-6 col-sm-6">
+                      <p>5:00pm - 6:00pm</p>
                     </div>
-                    <div class="col-lg-6 col-sm-6 font-bold">
-                        <span class="font-thin">Closing Ceremonies</span>
+                    <div class="col-lg-6 col-sm-6">
+                      <p>Closing Ceremonies</p>
                     </div>
                 </div>
             </div><!-- /row -->
