Updated color scheme for website

--- a/index.html
+++ b/index.html
@@ -31,11 +31,8 @@
       
       <div class="nav-collapse collapse navbar-responsive-collapse">
         <ul class="nav row">
-          <li data-slide="2" class="col-12 col-sm-2 active"><a id="menu-link-2" href="#slide-2" title="ABOUT">
+          <li data-slide="2" class="col-12 col-sm-3 active"><a id="menu-link-2" href="#slide-2" title="ABOUT">
             <span class="icon icon-user"></span> <span class="text">ABOUT</span></a>
-          </li>
-          <li data-slide="20" class="col-12 col-sm-2"><a id="menu-link-3" href="#slide-20" title="THEME">
-            <span class="icon icon-gears"></span> <span class="text">THEME</span></a>
           </li>
           <li data-slide="40" class="col-12 col-sm-2"><a id="menu-link-3" href="#slide-40" title="SCHEDULE">
             <span class="icon icon-calendar"></span> <span class="text">SCHEDULE</span></a>
@@ -72,7 +69,7 @@
     <div class="slide story" id="slide-2" data-slide="2">
         <div class="container">
             <div class="row title-row">
-                <div class="col-12 font-thin">About <span class="font-semibold">RowdyHacks</span></div>
+                <div class="col-12 font-thin header">About <span class="font-semibold">RowdyHacks</span></div>
             </div><!-- /row -->
             <div class="row line-row">
                 <div class="hr">&nbsp;</div>
@@ -95,42 +92,11 @@
         </div><!-- /container -->
     </div><!-- /slide2 -->
 
-    <!-- === Slide 20 (technically slide 3) === -->
-    <div class="slide story" id="slide-20" data-slide="20">
-        <div class="container">
-            <div class="row title-row">
-                <div class="col-12 font-thin">RowdyHacks <span class="font-semibold">Theme</span></div>
-                </div><!-- /row -->
-                <div class="row line-row">
-                    <div class="hr">&nbsp;</div>
-                </div><!-- /row -->
-        
-            <div class="row content-row">
-                <div class="col-12 col-lg-4 col-sm-6">
-                    <p><i class="icon icon-laptop"></i></p>
-                    <h2><span class="font-semibold">Design</span></h2>
-                    <h4 class="font-thin">Text text text</h4>
-                </div><!-- /col12 -->
-                <div class="col-12 col-lg-4 col-sm-6">
-                        <p><i class="icon icon-pencil"></i></p>
-                        <h2><span class="font-semibold">Develop</span></h2>
-                        <h4 class="font-thin">Text text text</h4>
-                </div><!-- /col12 -->
-                <div class="col-12 col-lg-4 col-sm-6">
-                        <p><i class="icon icon-tablet"></i></p>
-                        <h2 class="font-semibold">Create</h2>
-                        <h4 class="font-thin">Text text text</h4>
-                </div><!-- /col12 -->
-            </div><!-- /row -->
-
-                </div><!-- /container -->
-        </div><!-- /slide2 -->
-
     <!-- === Slide 40 === -->
     <div class="slide story" id="slide-40" data-slide="40">
         <div class="container">
             <div class="row title-row">
-                <div class="col-12 font-thin">Event<span class="font-semibold"> Schedule</span></div>
+                <div class="col-12 font-thin header">Event<span class="font-semibold"> Schedule</span></div>
             </div><!-- /row -->
             <div class="row line-row">
                 <div class="hr">&nbsp;</div>
@@ -199,7 +165,7 @@
     <div class="slide story faq" id="slide-4" data-slide="4">
         <div class="container">
             <div class="row title-row">
-                <div class="col-12 font-thin">Frequently asked <span class="font-semibold">questions</span></div>
+                <div class="col-12 font-thin header">Frequently asked <span class="font-semibold">questions</span></div>
             </div><!-- /row -->
             <div class="row line-row">
                 <div class="hr">&nbsp;</div>
@@ -290,14 +256,14 @@
     <div class="slide story" id="slide-5" data-slide="5">
         <div class="container">
             <div class="row title-row">
-                <div class="col-12 font-thin">RowdyHacks <span class="font-semibold">Prizes</span></div>
+                <div class="col-12 font-thin header">RowdyHacks <span class="font-semibold">Prizes</span></div>
             </div><!-- /row -->
             <div class="row line-row">
                 <div class="hr">&nbsp;</div>
             </div><!-- /row -->
             <div class="row subtitle-row">
                 <div class="col-sm-1 hidden-sm">&nbsp;</div>
-                <div class="col-12 col-sm-10 font-light">Prize information will go here</div>
+                <div class="col-12 col-sm-10 font-light">Prize information coming soon</div>
                 <div class="col-sm-1 hidden-sm">&nbsp;</div>
             </div><!-- /row -->
         </div><!-- /container -->
@@ -307,14 +273,14 @@
     <div class="slide story" id="slide-6" data-slide="6">
         <div class="container">
             <div class="row title-row">
-                <div class="col-12 font-light">Contact ACM<span class="font-semibold"> about RowdyHacks</span></div>
+                <div class="col-12 font-thin header">Contact<span class="font-semibold"> RowdyHacks</span></div>
             </div><!-- /row -->
             <div class="row line-row">
                 <div class="hr">&nbsp;</div>
             </div><!-- /row -->
             <div class="row subtitle-row">
                 <div class="col-sm-1 hidden-sm">&nbsp;</div>
-                <div class="col-12 col-sm-10 font-light">Have Questions?<br>Feel free to e-mail us or send us a message via social media.</div>
+                <div class="col-12 col-sm-10 font-light"><p>Have Questions?<br>Feel free to e-mail us or send us a message via social media.</p></div>
                 <div class="col-sm-1 hidden-sm">&nbsp;</div>
             </div><!-- /row -->
             <div id="contact-row-4" class="row">
