--- a/index.html
+++ b/index.html
@@ -24,14 +24,17 @@
       <!-- START NAVBAR  
           .navbar-toggle is used as the toggle for collapsed navbar content -->
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
-        <span class="icon-bar"></span>
+        <span class="icon icon-gears"></span> 
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
       
       <div class="nav-collapse collapse navbar-responsive-collapse">
         <ul class="nav row">
-          <li data-slide="2" class="col-12 col-sm-3 active"><a id="menu-link-2" href="#slide-2" title="ABOUT">
+          <li data-slide="1" class="col-12 col-sm-2"><a id="menu-link-1" href="#slide-1" title="ROWDYHACKS">
+            <span class="icon icon-gears"></span> <span class="text">HOME</span></a>
+          </li>
+          <li data-slide="2" class="col-12 col-sm-2"><a id="menu-link-2" href="#slide-2" title="ABOUT">
             <span class="icon icon-user"></span> <span class="text">ABOUT</span></a>
           </li>
           <li data-slide="40" class="col-12 col-sm-2"><a id="menu-link-3" href="#slide-40" title="SCHEDULE">
@@ -52,18 +55,44 @@
   </div>
   <!-- END NAVBAR -->
 
-  <!-- === MAIN Background === -->
+  <!-- START OF INTRO SECTION -->
   <div class="slide story" id="slide-1" data-slide="1">
     <div class="container">
-      <div id="home-row-1" class="row clearfix">
-         <div class="col-12">
+      <div id="home-row-1" class="row">
+        <div class="col-12" id="child">
           <h1 class="font-semibold">Rowdy<span class="font-thin" id="yellowtail">Hacks</span></h1>
           <h4 class="font-thin font-main">Hosted by <span class="font-semibold">ACM</span> UTSA</h4>
-          <br><br>
-        </div><!-- /col-12 -->
-      </div><!-- /row -->
-    </div><!-- /container -->
-  </div><!-- /slide1 -->
+        </div>
+      </div>
+      <br><br><br>
+      <div id="home-row-2" class="row">
+         <div class="col-2 col-sm-2 col-lg-offset-3 col-sm-offset-3" id="volunteer">
+          <a href="rowdyhacks.html" target="_blank"><button type="button" class="btn-xl btn-default" onclick="window.location.assign('rowdyhacks.html')">
+            <i class="fa fa-chevron-right"></i>ACM UTSA</button>
+          </a>
+         </div>
+         <div class="col-2 col-sm-2" id="volunteer">
+          <a href="rowdyhacks.html" target="_blank"><button type="button" class="btn-xl btn-default" onclick="window.location.assign('rowdyhacks.html')">
+            <i class="fa fa-chevron-right"></i>Register</button>
+          </a>
+         </div>
+         <div class="col-2 col-sm-2" id="volunteer">
+          <a href="rowdyhacks.html" target="_blank"><button type="button" class="btn-xl btn-default" onclick="window.location.assign('rowdyhacks.html')">
+            <i class="fa fa-chevron-right"></i>Button idea?</button>
+          </a>
+         </div>
+      </div>
+      <br><br><br>
+      <div id="scroll-down" class="row">
+        <div class="col-12 col-sm-12">
+          <a href="#slide-2" class="btn btn-circle">
+            <i class="fa fa-level-down animated"></i> 
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- END OF INTRO SECTION -->
 
     <!-- === Slide 2 === -->
     <div class="slide story" id="slide-2" data-slide="2">
@@ -82,12 +111,7 @@
                     <p>If you aren’t familiar, a hackathon is where you turn your crazy ideas into real projects. Plenty of your fellow peers gather 
                        to build something they’re passionate about so get involved in making incredible things.</p>
                     <br>
-               <div class="col-12 col-sm-12" id="volunteer">
-                <a href="rowdyhacks.html" target="_blank"><button type="button" class="btn-xl btn-default" onclick="window.location.assign('rowdyhacks.html')">
-                  <i class="fa fa-chevron-right"></i>Register</button>
-                </a>
-                </div>
-                </div>
+              </div>
             </div><!-- /row -->
         </div><!-- /container -->
     </div><!-- /slide2 -->
@@ -316,7 +340,7 @@
     <!-- Slide 6 -->
 
 <!-- SCRIPTS -->
-<script src="js/rowdyhacks.js"></script>
+<script src="js/html5shiv.js"></script>
 <script src="js/jquery-1.10.2.min.js"></script>
 <script src="js/jquery-migrate-1.2.1.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
