--- a/index.html
+++ b/index.html
@@ -59,33 +59,25 @@
   <div class="slide story" id="slide-1" data-slide="1">
     <div class="container">
       <div id="home-row-1" class="row">
-        <div class="col-12" id="child">
+        <div class="col-12">
           <h1 class="font-semibold">Rowdy<span class="font-thin" id="yellowtail">Hacks</span></h1>
           <h4 class="font-thin font-main">Hosted by <span class="font-semibold">ACM</span> UTSA</h4>
+          <br><br>
+          <p class="font-semibold font-date" style="font-size: 34px;"> April 8th - April 9th, 2016 </p>
         </div>
       </div>
-      <br><br><br>
+      <br><br>
       <div id="home-row-2" class="row">
-         <div class="col-2 col-sm-2 col-lg-offset-3 col-sm-offset-3" id="volunteer">
-          <a href="rowdyhacks.html" target="_blank"><button type="button" class="btn-xl btn-default" onclick="window.location.assign('rowdyhacks.html')">
-            <i class="fa fa-chevron-right"></i>ACM UTSA</button>
-          </a>
-         </div>
-         <div class="col-2 col-sm-2" id="volunteer">
-          <a href="rowdyhacks.html" target="_blank"><button type="button" class="btn-xl btn-default" onclick="window.location.assign('rowdyhacks.html')">
+         <div class="col-12 col-sm-12" id="volunteer">
+          <a href="rowdyhacks.html" target="_blank"><button type="button" class="btn-xl btn-default" onclick="window.open('rowdyhacks.html', '_blank')">
             <i class="fa fa-chevron-right"></i>Register</button>
           </a>
          </div>
-         <div class="col-2 col-sm-2" id="volunteer">
-          <a href="rowdyhacks.html" target="_blank"><button type="button" class="btn-xl btn-default" onclick="window.location.assign('rowdyhacks.html')">
-            <i class="fa fa-chevron-right"></i>Button idea?</button>
-          </a>
-         </div>
       </div>
-      <br><br><br>
+      <br><br>
       <div id="scroll-down" class="row">
         <div class="col-12 col-sm-12">
-          <a href="#slide-2" class="btn btn-circle">
+          <a data-slide="2" href="#slide-2" class="btn btn-circle page-scroll">
             <i class="fa fa-level-down animated"></i> 
           </a>
         </div>
@@ -127,57 +119,57 @@
             </div><!-- /row -->
             <div class="row subtitle-row">
                 <div class="col-sm-1 hidden-sm">&nbsp;</div>
-                <div class="col-12 col-sm-10 font-bold"><h3>Friday</h3></div>
+                <div class="col-12 col-sm-10 font-bold schedule"><h3>Friday</h3></div>
                 <div class="row subtitle-row">
-                    <div class="col-lg-6 col-sm-6 font-bold">
+                    <div class="col-lg-6 col-sm-6 schedule-time">
                       <p>5:00pm - 6:00pm</p>
                     </div>
-                    <div class="col-lg-6 col-sm-6">
+                    <div class="col-lg-6 col-sm-6 schedule-event">
                       <p>Check In/Registration</p>
                     </div>
-                    <div class="col-lg-6 col-sm-6">
+                    <div class="col-lg-6 col-sm-6 schedule-time">
                       <p>6:00pm - 7:00pm</p>
                     </div>
-                    <div class="col-lg-6 col-sm-6">
+                    <div class="col-lg-6 col-sm-6 schedule-event">
                       <p>Opening Ceremonies/Dinner</p>
                     </div>
-                    <div class="col-lg-6 col-sm-6">
+                    <div class="col-lg-6 col-sm-6 schedule-time">
                       <p>12:00am</p>
                     </div>
-                    <div class="col-lg-6 col-sm-6">
+                    <div class="col-lg-6 col-sm-6 schedule-event">
                       <p>Midnight Snack</p>
                     </div>
                 </div>
                 <div class="col-sm-1 hidden-sm">&nbsp;</div>
-                <div class="col-12 col-sm-10 font-bold"><h3>Saturday</h3></div>
-                    <div class="col-lg-6 col-sm-6">
+                <div class="col-12 col-sm-10 font-bold schedule"><h3>Saturday</h3></div>
+                    <div class="col-lg-6 col-sm-6 schedule-time">
                       <p>7:00am</p>
                     </div>
-                    <div class="col-lg-6 col-sm-6">
+                    <div class="col-lg-6 col-sm-6 schedule-event">
                       <p>Breakfast</p>
                     </div>
-                    <div class="col-lg-6 col-sm-6">
+                    <div class="col-lg-6 col-sm-6 schedule-time">
                       <p>12:00pm</p>
                     </div>
-                    <div class="col-lg-6 col-sm-6">
+                    <div class="col-lg-6 col-sm-6 schedule-event">
                       <p>Project Submissions/Lunch</p>
                     </div>
-                    <div class="col-lg-6 col-sm-6">
+                    <div class="col-lg-6 col-sm-6 schedule-time">
                       <p>12:00pm - 3:00pm</p>
                     </div>
-                    <div class="col-lg-6 col-sm-6">
+                    <div class="col-lg-6 col-sm-6 schedule-event">
                       <p>Judging</p>
                     </div>
-                    <div class="col-lg-6 col-sm-6">
+                    <div class="col-lg-6 col-sm-6 schedule-time">
                       <p>3:00pm - 5:00pm</p>
                     </div>
-                    <div class="col-lg-6 col-sm-6">
+                    <div class="col-lg-6 col-sm-6 schedule-event">
                       <p>Presentations/Prizes</p>
                     </div>
-                    <div class="col-lg-6 col-sm-6">
+                    <div class="col-lg-6 col-sm-6 schedule-time">
                       <p>5:00pm - 6:00pm</p>
                     </div>
-                    <div class="col-lg-6 col-sm-6">
+                    <div class="col-lg-6 col-sm-6 schedule-event">
                       <p>Closing Ceremonies</p>
                     </div>
                 </div>
@@ -235,7 +227,7 @@
 
               <div class="col-lg-6">
                 <h3 class="font-semibold">What can I build?</h3>
-                <p class="font-thin">Be creative! Anything you want web/mobile applications, a personal idea
+                <p class="font-thin">Be creative! Anything you want from web apps, mobile apps, and more!
                 </p>
               </div>
             </div>
@@ -261,7 +253,7 @@
             <div class="row subtitle-row">
               <div class="col-lg-6">
                 <h3 class="font-semibold">How big can a team be?</h3>
-                <p class="font-thin">We recommend teams of up to four members
+                <p class="font-thin">Team sizes will be 3-4 members
                 </p>
               </div>
 
@@ -287,7 +279,7 @@
             </div><!-- /row -->
             <div class="row subtitle-row">
                 <div class="col-sm-1 hidden-sm">&nbsp;</div>
-                <div class="col-12 col-sm-10 font-light">Prize information coming soon</div>
+                <div class="col-12 col-sm-10 font-light">Prize information coming soon <br><br><i class="icon icon-gift"></i></div>
                 <div class="col-sm-1 hidden-sm">&nbsp;</div>
             </div><!-- /row -->
         </div><!-- /container -->
@@ -334,6 +326,22 @@
                      </span>
                 </div><!-- /col12 -->
                 <div class="col-sm-1 hidden-sm">&nbsp;</div>
+            </div><!-- /row -->
+        </div><!-- /container -->
+    </div>
+    <!-- Slide 6 -->
+
+    <!-- === Slide 7 / Footer === -->
+    <div class="slide story" id="slide-7">
+        <div class="container">
+            <div class="row title-row">
+              <div id="scroll-down" class="row">
+                <div class="col-12 col-sm-12">
+                  <a data-slide="1" href="#slide-1" class="btn btn-circle page-scroll">
+                    <i class="fa fa-level-up animated"></i> 
+                  </a>
+                </div>
+              </div>
             </div><!-- /row -->
         </div><!-- /container -->
     </div>
