--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<html class=""><head lang="en">
+<html class="">
+<head lang="en">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
@@ -24,7 +25,7 @@
       <!-- START NAVBAR  
           .navbar-toggle is used as the toggle for collapsed navbar content -->
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
-        <span class="icon icon-gears"></span> 
+        <span class="icon-bar"></span> 
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
@@ -60,10 +61,8 @@
     <div class="container">
       <div id="home-row-1" class="row">
         <div class="col-12">
-          <h1 class="font-semibold">Rowdy<span class="font-thin" id="yellowtail">Hacks</span></h1>
-          <h4 class="font-thin font-main">Hosted by <span class="font-semibold">ACM</span> UTSA</h4>
-          <br><br>
-          <p class="font-semibold font-date" style="font-size: 34px;"> April 8th - April 9th, 2016 </p>
+          <img class="img-responsive" src="images/RowdyHacks.png" />
+          <br><br><br><br>
         </div>
       </div>
       <br><br>
@@ -349,9 +348,9 @@
 
 <!-- SCRIPTS -->
 <script src="js/html5shiv.js"></script>
-<script src="js/jquery-1.10.2.min.js"></script>
+<script src="js/jquery-1.12.1.min.js"></script>
 <script src="js/jquery-migrate-1.2.1.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
+<script src="js/bootstrap.js"></script>
 <script src="js/jquery.easing.1.3.js"></script>
 <script type="text/javascript" src="fancybox/jquery.fancybox.pack-v=2.1.5.js"></script>
 <script src="js/script.js"></script>
