Updating responsiveness for new footer section

--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                 <div class="col-sm-1 hidden-sm">&nbsp;</div>
             </div><!-- /row -->
             <div id="contact-row-4" class="row">
-                <div class="col-12 col-sm-4 with-hover-text">
+                <div class="col-12 col-sm-2 col-sm-offset-3 with-hover-text">
                     <p><a href="mailto:acm.utsa@gmail.com"><i class="icon icon-envelope"></i></a></p>
                      <span class="hover-text font-light ">
                         <div class="contact-text">
@@ -285,7 +285,7 @@
                         </div>
                      </span>
                 </div><!-- /col12 -->
-                <div class="col-12 col-sm-4 with-hover-text">
+                <div class="col-12 col-sm-2 with-hover-text">
                     <p><a target="_blank" href="https://www.facebook.com/acmutsa"><i class="icon icon-facebook"></i></a></p>
                     <span class="hover-text font-light ">
                         <div class="contact-text"> 
@@ -293,7 +293,7 @@
                         </div>
                      </span>
                 </div><!-- /col12 -->
-                <div class="col-12 col-sm-4 with-hover-text">
+                <div class="col-12 col-sm-2 with-hover-text">
                     <p><a target="_blank" href="https://www.twitter.com/acm_utsa"><i class="icon icon-twitter"></i></a></p>
                      <span class="hover-text font-light">
                         <div class="contact-text"> 
@@ -311,20 +311,20 @@
     <div class="slide story" id="slide-7">
         <div class="container">
             <div class="row title-row">
-                <div class="col-lg-4 col-md-4 com-sm-4">
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 footer-left">
                   <a href="https://www.acm-utsa.org" target="_blank">  
                     <img class="img-responsive" src="images/acm-logo-rectangle.png"> 
                   </a>
                 </div>
-                <div class="col-lg-4 col-md-4 col-sm-4">
-                  <a data-slide="1" href="#slide-1" class="btn btn-circle page-scroll">
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+                  <a href="#slide-1" class="btn btn-circle page-scroll">
                     <i class="fa fa-level-up animated"></i> 
                   </a>
                 </div>
-                <div class="col-lg-4 col-md-4 col-sm-4 footer">
-                  <ul class="contact font-bold">
-                    <li class="contact font-bold"><a href="rowdyhacks.html" target="_blank">Apply</a></li>
-                    <li class="contact font-bold"><a href="http://static.mlh.io/docs/mlh-code-of-conduct.pdf" target="_blank">Code of Conduct</a></li>
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 footer-right">
+                  <ul class="font-bold">
+                    <li class="font-bold"><a href="rowdyhacks.html" target="_blank">Apply</a></li>
+                    <li class="font-bold"><a href="http://static.mlh.io/docs/mlh-code-of-conduct.pdf" target="_blank">Code of Conduct</a></li>
                     <li class="contact"><a href="https://github.com/UTSA-ACM" target="_blank">ACM Github</a></li>
                   </ul>
                 </div>
