--- a/index.html
+++ b/index.html
@@ -65,8 +65,7 @@
       <br><br>
       <div id="home-row-2" class="row">
          <div class="col-12 col-sm-12">
-          <button type="button" class="btn-xl btn-default" onclick="window.open('rowdyhacks.html', '_blank')">
-            <i class="fa fa-chevron-right"></i>Register</button>
+          <button type="button" class="btn-xl btn-default" onclick="window.open('rowdyhacks.html', '_blank')">Register</button>
          </div>
       </div>
       <br><br>
