--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
         <div class="container">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
-              <i class="fa fa-bars"></i>
+              <i class="fa fa-bars hvr-icon-grow"></i>
             </button>
             
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -33,7 +33,7 @@
                   <li class="col-2 col-sm-2 " id="link-1"><a class="page-scroll" href="#slide-1" title="ROWDYHACKS">
                     <span class="icon icon-gears"></span> HOME</a>
                   </li>
-                  <li class="col-2 col-sm-2" id="link-2"><a class="page-scroll" href="#slide-2" title="ABOUT">
+                  <li class="col-2 col-sm-2" id="link-2"><a class="page-scroll"href="#slide-2" title="ABOUT">
                     <span class="icon icon-user"></span> ABOUT</a>
                   </li>
                   <li class="col-2 col-sm-2" id="link-3"><a class="page-scroll" href="#slide-40" title="SCHEDULE">
@@ -65,7 +65,7 @@
       <br><br>
       <div id="home-row-2" class="row">
          <div class="col-12 col-sm-12">
-          <button type="button" class="btn-xl btn-default" onclick="window.open('rowdyhacks.html', '_blank')">Register</button>
+          <button type="button" class="btn btn-xl hvr-glow-shadow" onclick="window.open('rowdyhacks.html', '_blank')">Register</button>
          </div>
       </div>
       <br><br>
@@ -87,7 +87,7 @@
                 <div class="col-12 font-thin header">About <span class="font-semibold">RowdyHacks</span></div>
             </div><!-- /row -->
             <div class="row line-row">
-                <div class="hr">&nbsp;</div>
+                <div class="hr hvr-underline-from-center">&nbsp;</div>
             </div><!-- /row -->
             <div class="row subtitle-row">
                 <div class="col-12 font-about">
@@ -310,17 +310,17 @@
     <div class="slide story" id="slide-7">
         <div class="container">
             <div class="row title-row">
-                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 footer-left">
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-6 footer-left">
                   <a href="https://www.acm-utsa.org" target="_blank">  
                     <img class="img-responsive" src="images/acm-logo-rectangle.png"> 
                   </a>
                 </div>
-                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-6">
                   <a href="#slide-1" class="btn btn-circle page-scroll">
                     <i class="fa fa-level-up animated"></i> 
                   </a>
                 </div>
-                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 footer-right">
+                <div class="col-lg-4 col-md-4 col-sm-4 hidden-xs footer-right">
                   <ul class="font-bold">
                     <li class="font-bold"><a href="rowdyhacks.html" target="_blank">Apply</a></li>
                     <li class="font-bold"><a href="http://static.mlh.io/docs/mlh-code-of-conduct.pdf" target="_blank">Code of Conduct</a></li>
