added slide 60 -- sponsorship slide

--- a/index.html
+++ b/index.html
@@ -262,7 +262,31 @@
         </div><!-- /container -->
     </div><!-- /slide5 -->
 
-    <!-- === Slide 6 / Contact === -->
+   <!-- === Slide 6a / Sponsor Us === -->
+   <div class="slide story" id="slide-60" data-slide="60">
+      <div class="container">
+         <div class="row title-row">
+             <div class="col-12 font-thin header">RowdyHacks <span class="font-semibold">Sponsorship</span></div>
+         </div><!-- /row -->
+         <div class="row line-row">
+             <div class="hr">&nbsp;</div>
+         </div><!-- /row -->
+         <div class="row subtitle-row">
+             <div class="col-sm-1 hidden-sm">&nbsp;</div>
+             <div class="col-12 col-sm-12 font-light">Sponsor us!</div>
+             <!--<div class="col-sm-1 hidden-sm">&nbsp;</div>-->
+         </div><!-- /row -->
+        <div class="col-lg-6 subtitle-row">
+          <h3 class="font-faq">What is a hackathon?</h3>
+          <p class="font-thin">Hackathons are events where individuals form teams to create, design, and develop projects.</p>
+        </div><!-- /row -->
+
+
+      </div><!-- /container -->
+   </div><!-- /slide60 -->
+
+
+   <!-- === Slide 6 / Contact === -->
     <div class="slide story" id="slide-6" data-slide="6">
         <div class="container">
             <div class="row title-row">
@@ -306,7 +330,7 @@
         </div><!-- /container -->
     </div>
     <!-- Slide 6 -->
-
+   
     <!-- === Slide 7 / Footer === -->
     <div class="slide story" id="slide-7">
         <div class="container">
@@ -334,6 +358,7 @@
     </div>
     <!-- Slide 6 -->
 
+   
 <!-- SCRIPTS -->
 <script src="js/html5shiv.js"></script>
 <script src="js/jquery-1.12.1.min.js"></script>
