added file header

--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+/******************************************************************************
+  RowdyHacks Website                                            March 12, 2016
+  Copyright ACM UTSA Student Chapter
+  Written by: Kurt King
+  Contributions: Bryan Deloeste, Kristin Mendoza, Alex Betancourt
+******************************************************************************/
+
 <html class="">
 <head lang="en">
   <meta charset="utf-8">
