--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!--
-  ******************************************************************************
+ ******************************************************************************
   RowdyHacks Website                                            March 12, 2016
   Copyright ACM UTSA Student Chapter
   Written by: Kurt King
@@ -280,13 +280,10 @@
              <div class="hr">&nbsp;</div>
          </div><!-- /row -->
          <div class="row subtitle-row">
-             <div class="col-sm-1 hidden-sm">&nbsp;</div>
              <div class="col-12 col-sm-12 font-light">Sponsor us!</div>
-             <!--<div class="col-sm-1 hidden-sm">&nbsp;</div>-->
          </div><!-- /row -->
         <div class="col-lg-6 subtitle-row">
-          <h3 class="font-faq">What is a hackathon?</h3>
-          <p class="font-thin">Hackathons are events where individuals form teams to create, design, and develop projects.</p>
+          <p class="font-thin">Please help us by supporting our hackathon! By sponsoring RowdyHacks, you will be contributing to our first inaugural hackathon and expand networking to current students. Sponsors will gain oppourtunities to recruit current UTSA students, as well as expand the customer base of their products. Please contact acm.utsa@gmail.com to begin sponsoring. Thank you!</p>
         </div><!-- /row -->
 
 
