--- a/index.html
+++ b/index.html
@@ -39,22 +39,25 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse navbar-main-collapse">
                 <ul class="nav navbar-nav row">
-                  <li class="col-2 col-sm-2 " id="link-1"><a class="page-scroll" href="#slide-1" title="ROWDYHACKS">
+                  <li class="col-lg-2 col-md-offset-2 col-sm-2 col-sm-offset-2" id="link-1"><a class="page-scroll" href="#slide-1" title="ROWDYHACKS">
                     <span class="icon icon-gears"></span> HOME</a>
                   </li>
-                  <li class="col-2 col-sm-2" id="link-2"><a class="page-scroll"href="#slide-2" title="ABOUT">
+                  <li class="col-lg-2 col-sm-2" id="link-2"><a class="page-scroll"href="#slide-2" title="ABOUT">
                     <span class="icon icon-user"></span> ABOUT</a>
                   </li>
-                  <li class="col-2 col-sm-2" id="link-3"><a class="page-scroll" href="#slide-40" title="SCHEDULE">
+                  <li class="col-lg-2 col-sm-2" id="link-3"><a class="page-scroll" href="#slide-40" title="SCHEDULE">
                     <span class="icon icon-calendar"></span> <span class="text">SCHEDULE</span></a>
                   </li>
-                  <li class="col-2 col-sm-2" id="link-4"><a class="page-scroll" href="#slide-4" title="FAQ">
+                  <li class="col-lg-2 col-sm-2" id="link-4"><a class="page-scroll" href="#slide-4" title="FAQ">
                     <span class="icon icon-question"></span> <span class="text">FAQ</span></a>
                   </li>
-                  <li class="col-2 col-sm-2" id="link-5"><a class="page-scroll" href="#slide-5" title="PRIZES">
+                  <li class="col-lg-2 col-md-offset-3 col-sm-2 col-sm-offset-3" id="link-5"><a class="page-scroll" href="#slide-5" title="PRIZES">
                     <span class="icon icon-trophy"></span> <span class="text">PRIZES</span></a>
                   </li>
-                  <li class="col-2 col-sm-2" id="link-6"><a class="page-scroll" href="#slide-6" title="CONTACT">
+                  <li class="col-lg-2 col-sm-2" id="link-6"><a class="page-scroll" href="#slide-60" title="SPONSORS">
+                    <span class="icon icon-trophy"></span> <span class="text">SPONSORS</span></a>
+                  </li>
+                  <li class="col-lg-2 col-sm-2" id="link-6"><a class="page-scroll" href="#slide-6" title="CONTACT">
                     <span class="icon icon-envelope"></span> <span class="text">CONTACT</span></a>
                   </li>
                 </ul>
