--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
 </head>
 
 <body data-spy="scroll" data-target=".navbar-fixed-top">
+<!-- #overflow-wall prevents x-overflow on mobile -->
+<div id="overflow-wall" style="width:100%;box-sizing:border-box;overflow-x:hidden;overflow-y:auto;">
 
   <!-- START NAVBAR  -->
 
@@ -389,6 +391,6 @@ $(document).ready(function () {
   })(window);
 </script>
 
-
+</div>
 </body>
 </html>
